add running scans page, minor fixes, readme

--- a/views/errorDetails.pug
+++ b/views/errorDetails.pug
@@ -6,7 +6,7 @@ html
       include errorDetails.css
   body
     div(class='header text-center')
-      h1 Akkeris Detectify Scanner
+      h1 Akkeris Detectifier
     div(class='container')
       h3 Error Details
       p= errorDescription
