--- a/views/reportDetails.pug
+++ b/views/reportDetails.pug
@@ -10,7 +10,7 @@ html
     link(rel='shortcut icon', type='image/png', href= favicon)
   body
     div(class='header text-center')
-      h1 Akkeris Detectify Scanner
+      h1 Akkeris Detectifier
     div(class='container')
       h3(class='report-title') Report Details for #{endpoint}
       div(class='details-container')
