fix date locale, add links to error/report details

--- a/views/reportDetails.pug
+++ b/views/reportDetails.pug
@@ -8,7 +8,7 @@ html
     link(rel="stylesheet", href="/loadAwesomePacman.css")
     link(rel='shortcut icon', type='image/png', href= favicon)
     style
-      include style.css
+      include styles.css
   body
     div(class='header text-center')
       h1 Akkeris Detectifier
