--- a/views/errorDetails.pug
+++ b/views/errorDetails.pug
@@ -3,7 +3,7 @@ html
     title= title
     link(rel='shortcut icon', type='image/png', href='/failure_lg.png')
     style
-      include style.css
+      include styles.css
   body
     div(class='header text-center')
       h1 Akkeris Detectifier
