--- a/views/reportDetails.pug
+++ b/views/reportDetails.pug
@@ -7,6 +7,7 @@ html
     script(src='/json-formatter.umd.js')
     link(rel="stylesheet", href="/loadAwesomePacman.css")
     link(rel='shortcut icon', type='image/png', href= favicon)
+    script(src='/processDate.js')
     style
       include styles.css
   body
@@ -17,7 +18,7 @@ html
       div(class='details-container')
         div(class='details-item')
           h4 Date Ran
-          p #{createdAt}
+          p(class='date-item') #{createdAt}
         div(class='details-item')
           h4 Akkeris App
           p
