fix readme, improve nav

--- a/views/errorDetails.pug
+++ b/views/errorDetails.pug
@@ -8,6 +8,11 @@ html
   body
     div(class='header text-center')
       h1 Akkeris Detectifier
+      div(class='nav')
+        a(href='/all')
+          h4 All Scans
+        a(href='/')
+          h4 Running Scans
     div(class='container')
       h3 Error Details
       p= errorDescription
