--- a/views/reportDetails.pug
+++ b/views/reportDetails.pug
@@ -13,6 +13,11 @@ html
   body
     div(class='header text-center')
       h1 Akkeris Detectifier
+      div(class='nav')
+        a(href='/all')
+          h4 All Scans
+        a(href='/')
+          h4 Running Scans
     div(class='container')
       h3(class='report-title') Report Details for #{endpoint}
       div(class='details-container')
